# projector_Calibration

./: CMakeLists.txt
src/: activate_projector.cpp  create_projection.cpp  dialogabout.cpp  dialogabout.h  dialogabout.ui  dialogcoordinatesystems.cpp  dialogcoordinatesystems.h  dialogcoordinatesystems.ui  dialogdevicemanager.cpp  dialogdevicemanager.h  dialogdevicemanager.ui  dialogfilename.cpp  dialogfilename.h  dialogfilename.ui  global.h  interfaceextexe.cpp  interfaceextexe.h  labelcorner.cpp  labelcorner.h  log_widget.cpp  log_widget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  outbondpacket.cpp  outbondpacket.h  packetpolyline.cpp  packetpolyline.h  packetreferenceobject.cpp  packetreferenceobject.h  packetreferencepoint.cpp  packetreferencepoint.h  packetservice.cpp  packetservice.h  packettext.cpp  packettext.h  parameter.cpp  parameter.h  parametercross.cpp  (+36 more)
src/common/: client.cpp  client.h  event_channel_interface_handler.cpp  event_channel_interface_handler.h  event_channel_server.cpp  event_channel_server.h
